# garfield-bot

./: .gitignore  Cargo.toml
src/: json.rs  main.rs
src/app/: mod.rs
src/app/stock/: entity.rs  json.rs  mod.rs  repository.rs  service.rs
src/app/weather/: entity.rs  json.rs  mod.rs  repository.rs  service.rs
