[package]
name = "garfield-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"
